12319
Also, on ctl-D
```scala
scala> <console>:1: error: illegal character '\u0004'
\u0004
^
```
